cms-clusters/wordpress/app/wordpress_single_online/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: phpmyadmin
